--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2105,17 +2105,72 @@ body {
     width: 100% !important;
   }
 }
-.cid-qHJqSzZQf7 {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background: linear-gradient(0deg, #ffffff, #cccccc);
+.cid-qJ3fObejIu {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #2e2e2e;
 }
-.cid-qHJqSzZQf7 .mbr-iconfont-social {
-  font-size: 32px;
-  color: #0f7699;
+@media (max-width: 767px) {
+  .cid-qJ3fObejIu .content {
+    text-align: center;
+  }
+  .cid-qJ3fObejIu .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
 }
-.cid-qHJqSzZQf7 .social-list a:focus {
-  text-decoration: none;
+@media (max-width: 767px) {
+  .cid-qJ3fObejIu .media-wrap {
+    margin-bottom: 1rem;
+  }
+}
+.cid-qJ3fObejIu .media-wrap .mbr-iconfont-logo {
+  font-size: 7.5rem;
+  color: #f36;
+}
+.cid-qJ3fObejIu .media-wrap img {
+  height: 6rem;
+}
+@media (max-width: 767px) {
+  .cid-qJ3fObejIu .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-qJ3fObejIu .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-qJ3fObejIu .footer-lower .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-qJ3fObejIu .footer-lower .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-qJ3fObejIu .footer-lower .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-qJ3fObejIu .footer-lower .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-qJ3fObejIu .footer-lower .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-qJ3fObejIu .footer-lower .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
 }
 .cid-qHJnBQh5bI .navbar {
   background: #ffffff;
