create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1819,7 +1819,7 @@ body {
 .cid-qHJzHrNUvq {
   padding-top: 45px;
   padding-bottom: 45px;
-  background-color: #ffffff;
+  background-color: #cccccc;
 }
 .cid-qHJzHrNUvq .content-slider {
   display: flex;
